# context-aware-qa-rag-agent

./: .gitignore  README.md
backend/: docker-compose.yml  pyproject.toml  requirements.txt
backend/api-gateway/: Makefile  go.mod  go.sum
backend/api-gateway/cmd/app/: app.go
backend/api-gateway/internal/handlers/: handlers.go
backend/api-gateway/internal/models/: models.go
backend/api-gateway/internal/routes/: routes.go
backend/api-gateway/internal/utilities/: utilities.go
backend/microservices/file_upload_service/: pyproject.toml  requirements.txt
backend/microservices/file_upload_service/src/: controller.py  main.py  service.py
backend/microservices/file_upload_service/src/utils/: text_splitter.py  utils.py
backend/microservices/rag_service/: Dockerfile  pyproject.toml  requirements.txt
backend/microservices/rag_service/src/: controller.py  entities.py  main.py
backend/microservices/rag_service/src/services/: generate.py  retriever.py
backend/microservices/search_service/: pyproject.toml  requirements.txt
backend/microservices/search_service/src/: agent.py  controller.py  main.py
backend/microservices/stocks_service/: Dockerfile  pyproject.toml  requirements.txt
backend/microservices/stocks_service/src/: controller.py  main.py
backend/microservices/stocks_service/src/services/: client.py
backend/src/: api.py  main.py  models.py
backend/src/health/: controller.py
backend/src/retriever/: controller.py  generate.py  models.py  service.py
backend/src/search_mcp/: client.py  controller.py
backend/src/stocks_mcp/: client.py  controller.py  server.py
backend/src/uploader/: controller.py  models.py  service.py
backend/src/utils/: text_splitter.py  utils.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  tsconfig.json
frontend/actions/: actions.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: chat.tsx  file-upload.tsx  footer.tsx  info-card.tsx  message.tsx  messages.tsx  text-input.tsx
frontend/components/ui/: sidebar.tsx
frontend/contexts/: chat-context.tsx
frontend/hooks/: use-generate.tsx
frontend/lib/: api.ts  config.ts  typings.d.ts  utils.ts
frontend/pages/: chat-page.tsx
