[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "fastapi-mcp>=0.3.4",
    "fastembed>=0.4.2",
    "langchain==0.3.21",
    "langchain-cohere==0.3.1",
    "langchain-community==0.3.5",
    "langchain-core==0.3.48",
    "langchain-groq>=0.2.4",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-nomic==0.1.4",
    "langchain-qdrant==0.2.0",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.0",
    "mcp>=1.10.1",
    "pdfplumber>=0.11.7",
    "pypdf==5.3.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "tavily-python>=0.7.9",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
]
