[project]
name = "upload-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "fastembed>=0.4.2",
    "langchain==0.3.21",
    "langchain-community==0.3.5",
    "langchain-core==0.3.48",
    "langchain-groq>=0.2.4",
    "langchain-nomic==0.1.4",
    "langchain-qdrant==0.2.0",
    "langgraph>=0.5.0",
    "pdfplumber>=0.11.7",
    "pypdf==5.3.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]
