[project]
name = "search_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.14",
    "langchain==0.3.21",
    "langchain-community==0.3.5",
    "langchain-core==0.3.48",
    "langchain-groq>=0.2.4",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "slowapi>=0.1.9",
    "tavily-python>=0.7.9",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
]
