[project]
name = "stocker-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.14",
    "fastapi-mcp>=0.3.4",
    "langchain==0.3.21",
    "langchain-community==0.3.5",
    "langchain-core==0.3.48",
    "langchain-groq>=0.2.4",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "mcp>=1.10.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
]
